--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,1 +1,10 @@
-<h2>Hello world!</h2>
+<!DOCTYPE html>
+
+<html>
+    <head>
+        This is title
+    </head>
+    <body>
+        <h1> This is index.html </h1>
+    </body>
+</html>
