--- a/src/views/about.html
+++ b/src/views/about.html
@@ -2,9 +2,9 @@
 
 <html>
     <head>
-        This is head
+
     </head>
     <body>
-        <h1> This is index.html </h1>
+        <h1> This is about page </h1>
     </body>
 </html>
