--- a/src/views/template.pug
+++ b/src/views/template.pug
@@ -1,5 +1,6 @@
 html
     head
+        link(rel='stylesheet', href='/style/common.css')
         meta(charset='utf-8')
         title PUG
         style.
