--- a/src/views/template.pug
+++ b/src/views/template.pug
@@ -1,6 +1,7 @@
 html
     head
         link(rel='stylesheet', href='/style/common.css')
+        script(src="/js/common.js") 
         meta(charset='utf-8')
         title PUG
         style.
