--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <link rel="stylesheet" href="/style/common.css" />
+<script type="text/JavaScript" src="/js/common.js"></script> 
 <html>
     <head>
         This is head
